# temporal-chaos-testing

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-MIT  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-spice.txt
.github/workflows/: ci.yml
chaos/: README.md  controlled_clock_demo.py  faketime_demo.sh
partie-aerospatiale/: README.md  manifest.json  spice_time_demo.py
partie-aerospatiale/kernels/: vg100051.tsc
src/temporal_chaos_testing/: __init__.py  cli.py
src/temporal_chaos_testing/scenarios/: __init__.py  certificate_expiry.py  controlled_clock.py  faketime_demo.sh  holdover.py  jwt_totp_skew.py  leap_smear_mismatch.py  lease_pause.py  ptp_grandmaster_failover.py  spice_time_demo.py
tests/: test_cli.py  test_controlled_clock.py  test_spice_demo.py
