[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-chaos-testing"
version = "0.1.0"
description = "Temporal chaos testing helpers and injected laboratory scenarios"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [
  { name = "Theophile Montovert" }
]
dependencies = []

[project.scripts]
temporal-chaos = "temporal_chaos_testing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]